# IBD-assistant-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: main.py
bot/handlers/: bowel_movement.py  constants.py  main_handler.py
bot/keyboards/: bowel_movement.py  main_keyboard.py
bot/middlewares/: __init__.py  database.py  error_handler.py  fsm_destiny.py  patched_fsm.py
config/: settings.py
database/: fsm_storage.py  session.py
database/models/: __init__.py  bowel_movement.py  user.py
database/repository/: bowel_movements.py  user.py
migrations/: env.py
migrations/versions/: 20260215_0001_init.py  20260215_0002_add_fsm_storage.py  20260215_0003_add_stool_consistency.py  20260215_0004_add_user_tz.py  20260216_0004_add user_tz.py  20260219_0005_add_blood_lvl.py  20260219_0006_add_mucus.py  20260223_0007_add_false_urge.py
service/: bowel_movement.py  user.py  utills.py
tests/: conftest.py  test_basic.py
tests/integration/handlers/: test_bowel_movement_handlers.py
tests/unit/middlewares/: test_fsm_destiny.py
tests/unit/services/: __init__.py  test_bowel_movement_service.py  test_user_service.py
